2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	
	Also recognise keypad keys for navigation. Bug #337089.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	
	Fix the build.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c:
	
	Correctly mark mouse click events as consumed.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c:
	
	Improve the a11y theme check.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* lib/Makefile.am:
	
	Use variables here, not configure substitutions.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-notifiers.cpp:
	
	Simply CallGetService to get the pref branch.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:

	Use AutoJSContextStack on window open.
	Disable XPrint.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:
	
	Set printer name setting.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* doc/reference/Makefile.am:
	
	Try to fix the docs build with gecko trunk.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/languages.h:
	
	Remove suprious entry.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar-editor.c:(ephy_toolbar_editor_response):
	
	Make sure to destroy the dialogue in all cases.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:
	R embed/mozilla/MozillaPrivate.cpp:
	R embed/mozilla/MozillaPrivate.h:
	
	Remove unused files.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:
	
	Don't start search on <embed> and <object> elements.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:
	
	Don't leak the UI language.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:
	
	Add more mime types.
