@@ -171,6 +171,9 @@ static const GtkActionEntry ephy_menu_entries [] = {
 	{ "EditPaste", GTK_STOCK_PASTE, N_("_Paste"), "<control>V",
 	  N_("Paste clipboard"),
 	  G_CALLBACK (window_cmd_edit_paste) },
+	{ "EditDelete", GTK_STOCK_DELETE, NULL, NULL,
+	  N_("Delete text"),
+	  G_CALLBACK (window_cmd_edit_delete) },
 	{ "EditSelectAll", NULL, N_("Select _All"), "<control>A",
 	  N_("Select the entire page"),
 	  G_CALLBACK (window_cmd_edit_select_all) },
