@@ -1,6 +1,14 @@
 2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-window.c:
+	* src/window-commands.c:
+	* src/window-commands.h:
+	
+	Add "delete text" command.
+	
+2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-window.c:
 	
 	Also recognise keypad keys for navigation. Bug #337089.
 
